@@ -8,21 +8,23 @@ import zen.task.TaskList;
 /** Handles console input and output for the Zen application. */
 public class Ui {
     private static final String DIVIDER = "____________________________________________________________";
-    private static final String NAME = "Zen";
     private static final String INDENTATION = " ".repeat(5);
-    private static final String INDENTED_DIVIDER = " ".repeat(4) + DIVIDER;
+    private static final String GREETING_INDENTATION = " ".repeat(4);
+    private static final String INDENTED_DIVIDER = GREETING_INDENTATION + DIVIDER;
     private static final String BANNER = """
-                 ______             \s
-                |__  /___  _ __     \s
-                  / // _ \\| '_ \\  \s
-                 / /|  __/| | | |   \s
-                /____\\___||_| |_|\
-            """;
+            ______             \s
+           |__  /___  _ __     \s
+             / // _ \\| '_ \\  \s
+            / /|  __/| | | |   \s
+           /____\\___||_| |_|\
+           """;
     private final Scanner scanner;
+    private final StringBuilder response;
 
     /** Creates a user interface that reads commands from standard input. */
     public Ui() {
         this.scanner = new Scanner(System.in);
+        this.response = new StringBuilder();
     }
 
     /** Returns the next trimmed command read from standard input. */
@@ -44,6 +46,34 @@ public class Ui {
         }
     }
 
+    /**
+     * Records lines that the graphical user interface displays after a command.
+     *
+     * @param lines response lines to record
+     */
+    private void recordResponse(String... lines) {
+        for (String line : lines) {
+            if (!response.isEmpty()) {
+                response.append('\n');
+            }
+            response.append(line);
+        }
+    }
+
+    /** Clears the response accumulated for the previous command. */
+    public void clearResponse() {
+        response.setLength(0);
+    }
+
+    /**
+     * Returns the response accumulated while executing the current command.
+     *
+     * @return the command response without console indentation
+     */
+    public String getResponse() {
+        return response.toString();
+    }
+
     /** Prints a divider between console messages. */
     public void printDivider() {
         System.out.println(INDENTED_DIVIDER);
@@ -56,20 +86,22 @@ public class Ui {
      * @param size the resulting number of tasks.
      */
     public void printAddTask(Task task, int size) {
-        printIndented(
-                "Got it. I've added this task:",
-                String.format("  %s", task),
-                String.format("Now you have %d tasks in the list.", size)
-        );
+        String[] lines = {
+            "Got it. I've added this task:",
+            String.format("  %s", task),
+            getTaskCountMessage(size)
+        };
+        echo(lines);
     }
 
     /**
-     * Prints a message with the standard console indentation.
+     * Prints the message with the standard console indentation and records it for the GUI.
      *
-     * @param echoString the message to print.
+     * @param lines the message to print.
      */
-    public void echo(String echoString) {
-        printIndented(echoString);
+    public void echo(String... lines) {
+        printIndented(lines);
+        recordResponse(lines);
     }
 
     /**
@@ -79,10 +111,9 @@ public class Ui {
      */
     public void printTaskList(TaskList taskList) {
         if (taskList.isEmpty()) {
-            printIndented("Your task list is currently empty.");
+            echo("Your task list is currently empty.");
         } else {
-            printIndented("Here are the tasks in your list:");
-            printIndented(taskList.toString());
+            echo("Here are the tasks in your list:", taskList.toString());
         }
     }
 
@@ -93,10 +124,9 @@ public class Ui {
      */
     public void printMatchingTasks(TaskList taskList) {
         if (taskList.isEmpty()) {
-            printIndented("No matching tasks in your list.");
+            echo("No matching tasks in your list.");
         } else {
-            printIndented("Here are the matching tasks in your list:");
-            printIndented(taskList.toString());
+            echo("Here are the matching tasks in your list:", taskList.toString());
         }
     }
 
@@ -106,10 +136,11 @@ public class Ui {
      * @param task the completed task.
      */
     public void printMarkTaskDone(Task task) {
-        printIndented(
-                "Nice! I've marked this task as done:",
-                String.format("  %s", task)
-        );
+        String[] lines = {
+            "Nice! I've marked this task as done:",
+            String.format("  %s", task)
+        };
+        echo(lines);
     }
 
     /**
@@ -118,10 +149,11 @@ public class Ui {
      * @param task the incomplete task.
      */
     public void printMarkTaskNotDone(Task task) {
-        printIndented(
-                "OK, I've marked this task as not done yet:",
-                String.format("  %s", task)
-        );
+        String[] lines = {
+            "Okay, I've marked this task as not done:",
+            String.format("  %s", task)
+        };
+        echo(lines);
     }
 
     /**
@@ -131,23 +163,48 @@ public class Ui {
      * @param size the resulting number of tasks.
      */
     public void printDeleteTask(Task task, int size) {
-        printIndented(
-                "Noted. I've removed this task:",
-                String.format("  %s", task),
-                String.format("Now you have %s tasks in the list.", size)
-        );
+        String[] lines = {
+            "Noted. I've removed this task:",
+            String.format("  %s", task),
+            getTaskCountMessage(size)
+        };
+        echo(lines);
     }
 
-    /** Prints the application greeting. */
-    public void printGreeting() {
-        String greeting = """
-                %s
-                %s
-                    Hello! I'm %s.
-                    What can I do for you?
-                %s
-                """.formatted(INDENTED_DIVIDER, BANNER, NAME, INDENTED_DIVIDER);
-        System.out.println(greeting);
+    /**
+     * Returns a grammatically correct message describing the current number of tasks.
+     *
+     * @param size number of tasks in the list
+     * @return task-count message
+     */
+    private static String getTaskCountMessage(int size) {
+        String taskWord = size == 1 ? "task" : "tasks";
+        return String.format("You now have %d %s in the list.", size, taskWord);
+    }
+
+    /**
+     * Prints the application greeting surrounded by console dividers.
+     *
+     * @param greeting greeting shared with the graphical interface
+     */
+    public void printGreeting(String greeting) {
+        printDivider();
+        printGreetingContent(BANNER, greeting);
+        printDivider();
+        System.out.println();
+    }
+
+    /**
+     * Prints greeting lines using the divider's indentation.
+     *
+     * @param lines greeting lines to print
+     */
+    private static void printGreetingContent(String... lines) {
+        for (String line : lines) {
+            for (String individualLine : line.split("\\R")) {
+                System.out.println(GREETING_INDENTATION + individualLine);
+            }
+        }
     }
 
     /** Prints the farewell message and closes standard input. */
